Keep explorer at a fixed width when not collapsed
ghstack-source-id: e3e86c29d851a3d7afd2a5ce17bb937ad429b1de
Pull Request resolved: https://github.com/apoorvkhurasia/notemaker-js/pull/34

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -207,7 +207,6 @@ input.mini-editor:focus {
   margin: 0;
   padding: 0;
   font-size: 0.85em;
-  width: auto;
   max-width: 170px;
 
   button.material-symbols-outlined {
